# fit-agent-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.voice  README.md  aegra.json  auth.py  check_db_messages.py  custom_routes.py  docker-compose.yml  fix_excel_cascade.py  package-lock.json  pyproject.toml  rebuild_excel_2021.py  voice_proxy.py
.catpaw/commands/: speckit.plan.md
alembic/: env.py
alembic/versions/: 20260303_add_active_thread_to_users.py  20260303_add_user_threads.py  20260306_add_memory_tables.py  20260307_add_scenarios.py  20260307_memory_meta.py  20260307_message_id.py  3059246aed09_add_users_table.py
docs/: ARCHITECTURE.md  CHANGELOG.md  COACH_OS_PAGE_DESIGN.md  CONTEXT_COMPRESSION.md  DIALOGUE_EXPERIMENT.md  LESSONS_LEARNED.md  PRODUCT_DISCUSSION.md  README.md  SESSION_ARCHITECTURE.md
docs/prototype/: coach-os-pages.html
fit-swift/: README.md  project.yml
fit-swift/docs/: MOCK_STREAM.md  STREAM_IMPL.md
fit-swift/fit-swift/: APIClient.swift  AssessmentPlaceholderView.swift  AudioRecorder.swift  AuthService.swift  ChatView.swift  ChatViewModel.swift  CoachAvatar.swift  CoachOSMockView.swift  ContentView.swift  DashboardView.swift  DebugOverlay.swift  Info.plist  MarkdownText.swift  NutritionPlaceholderView.swift  ProfileStore.swift  ProfileView.swift  RootView.swift  SettingsView.swift  VoiceService.swift  WorkoutPlaceholderView.swift  fit-swiftApp.swift
fit-swift/fit-swift.xcodeproj/: project.pbxproj
scripts/: init_user_threads.py  mock_stream_server.py  parse_sse_like_swift.py
skills/planning/: SKILL.md
tests/: test_glm.py
(+23 files in other folders)
